--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Product Page Template</title>
+    <title>SmartClick by Collin Li</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
+      <img src="images/SmartClick Logo White.svg" alt="SmartClick Logo White" width="75" height="75" class="rounded-circle navbar-brand"/>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -37,7 +37,7 @@
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
-    </nav>
+  </nav>
     <div class="container mt-2">
       <div class="row">
         <div class="col-12">
@@ -49,7 +49,7 @@
               </div>
             </div>
             <p class="text-center">Collin Li</p>
-            <img src="images/1200X400.gif" alt="" class="img-fluid"> 
+            <img src="images/SmartClick QuadChart.png" alt="SmartClick Quadchart" class="img-fluid"> 
           </div>
         </div>
       </div>
