--- a/index.html
+++ b/index.html
@@ -186,5 +186,22 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap-4.4.1.js"></script>
+
+    <!-- Default Statcounter code for SmartClick http://smartclick.ml/ -->
+    <script type="text/javascript">
+      var sc_project=12735504; 
+      var sc_invisible=1; 
+      var sc_security="9e43bad4"; 
+      </script>
+      <script type="text/javascript"
+      src="https://www.statcounter.com/counter/counter.js"
+      async></script>
+      <noscript><div class="statcounter"><a title="Web Analytics"
+      href="https://statcounter.com/" target="_blank"><img
+      class="statcounter"
+      src="https://c.statcounter.com/12735504/0/9e43bad4/1/"
+      alt="Web Analytics"
+      referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+    <!-- End of Statcounter Code -->
   </body>
 </html>
