--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="row">
           <div class="col-12">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lFqDM_YlXV8"></iframe>
+              <iframe class="embed-responsive-item" src="https://youtu.be/SnMMaSRUR-E"></iframe>
             </div>
           </div>
         </div>
