--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
     </div>
     <hr>
     <section>
-      <h2 class="text-center">Video Tutorial</h2>
+      <h2 class="text-center" href="url">Video Presentation</h2>
       <div class="container">
         <div class="row">
           <div class="col-12">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe class="embed-responsive-item" src="https://youtu.be/SnMMaSRUR-E"></iframe>
+              <iframe src="https://www.youtube.com/embed/SnMMaSRUR-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
         </div>
