--- a/index.html
+++ b/index.html
@@ -21,22 +21,9 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+            <a class="nav-link" href="#">About Me</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
   </nav>
     <div class="container mt-2">
@@ -52,20 +39,6 @@
             <p class="text-center">Collin Li</p>
             <img src="images/SmartClick QuadChart.png" alt="SmartClick Quadchart" class="img-fluid"> 
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="text-center col-md-6 col-12">
-          <h3>Lorem ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, magnam?</p>
-          <a class="btn btn-danger btn-lg" href="#" role="button">Tutorials</a>
-        </div>
-        <div class="text-center col-md-6 col-12">
-          <h3>Lorem ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, magnam?</p>
-          <a class="btn btn-info btn-lg" href="#" role="button">Documentation</a>
         </div>
       </div>
     </div>
@@ -131,12 +104,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2">
-          <h2>Contact Us</h2>
+          <h2>Contact Me</h2>
           <address>
-            <strong>MyCompany, Inc.</strong><br>
-            Sunny Autumn Plaza, Grand Coulee,<br>
-            CA, 91308-4075, US<br>
-            <abbr title="Phone">P:</abbr> (123) 456-7890
+            <strong>Collin Li</strong><br>
+            Great Neck South High School, Great Neck,<br>
+            NY, 11020, US<br>
+            <abbr title="Email">E-mail:</abbr> collinli2022@gmail.com
           </address>
           <h4>Social</h4>
           <div class="row">
