Cleaned up website for presentation

--- a/index.html
+++ b/index.html
@@ -1,181 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SmartClick by Collin Li</title>
-    <link rel="icon" href="images/favion.svg"
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>SmartClick by Collin Li</title>
+<link rel="icon" href="images/favion.svg"
     <!-- Bootstrap -->
-    <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <img src="images/SmartClick Logo White.svg" alt="SmartClick Logo White" width="75" height="75" class="rounded-circle navbar-brand"/>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
-          </li>
-        </ul>
-      </div>
-  </nav>
-    <div class="container mt-2">
-      <div class="row">
-        <div class="col-12">
-          <div class="jumbotron">
-            <h1 class="text-center">SmartClick: A Novel Automated Segmentation Tool for Medical Images with Interactive Optimization Capabilities Designed for Liver Cysts</h1>
-            <div class="row justify-content-center">
-<div class="col-auto">
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Request Trial</a> </p>
-              </div>
-            </div>
-            <p class="text-center">Collin Li</p>
-            <img src="images/SmartClick QuadChart.png" alt="SmartClick Quadchart" class="img-fluid"> 
+<link href="css/bootstrap-4.4.1.css" rel="stylesheet">
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <img src="images/SmartClick Logo White.svg" alt="SmartClick Logo White" width="75" height="75" class="rounded-circle navbar-brand"/>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item"> <a class="nav-link" href="https://www.collinli.ml/">About Me</a> </li>
+    </ul>
+  </div>
+</nav>
+<div class="container mt-2">
+  <div class="row">
+    <div class="col-12">
+      <div class="jumbotron">
+        <h1 class="text-center">SmartClick: A Novel Automated Segmentation Tool for Medical Images with Interactive Optimization Capabilities Designed for Liver Cysts</h1>
+        <div class="row justify-content-center">
+          <div class="col-auto">
+            <p><a class="btn btn-primary btn-lg" href="https://projectboard.world/isef/project/tmed024---smartclick-segmentation-tool-for-liver-cysts" role="button">Official ISEF Project Board</a> </p>
           </div>
         </div>
-      </div>
+        <p class="text-center">Collin Li</p>
+        <img src="images/SmartClick QuadChart.png" alt="SmartClick Quadchart" class="img-fluid"> </div>
     </div>
-    <hr>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-3 col-md-6 col-12">
-          <h2>Lorem ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis accusamus praesentium eveniet ad unde doloremque ex officia eius ab quibusdam.</p>
-        </div>
-        <div class="col-lg-3 col-md-6 col-12">
-          <h2>Lorem ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, mollitia natus amet eligendi consequuntur. Veritatis ullam debitis voluptas repellat laboriosam.</p>
-        </div>
-        <div class="col-lg-3 col-md-6 col-12">
-          <h2> Lorem ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, error, itaque non vel architecto ratione obcaecati doloribus delectus illum harum?</p>
-        </div>
-        <div class="col-lg-3 col-md-6 col-12">
-          <h2>Lorem ipsum</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque, nam voluptate accusantium nulla distinctio odit aliquam voluptatem ab. Earum.</p>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <section>
-      <h2 class="text-center" href="url">Video Presentation</h2>
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.youtube.com/embed/SnMMaSRUR-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <div class="container mt-4">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card">
-            <img class="card-img-top" src="images/600X300.gif" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Feature</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, at.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6">
-          <div class="card">
-            <img class="card-img-top" src="images/600X300.gif" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Feature</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt, at.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  </div>
+</div>
 <hr>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2">
-          <h2>Contact Me</h2>
-          <address>
-            <strong>Collin Li</strong><br>
-            Great Neck South High School, Great Neck,<br>
-            NY, 11020, US<br>
-            <abbr title="Email">E-mail:</abbr> collinli2022@gmail.com
-          </address>
-          <h4>Social</h4>
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-            <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-            <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-            <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-12">
-          <h2>Testimonials</h2>
-          <ul class="list-unstyled">
-            <li class="media">
-              <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">Heading 1</h5>
-                <p class="mb-0">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-              </div>
-            </li>
-            <li class="media my-4">
-              <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">Heading 2</h5>
-                <p class="mb-0">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-4 col-12">
-          <h2>About Us</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, voluptates, soluta velit nostrum ut iste exercitationem vitae ipsum repellendus laudantium ab possimus nemo odio cumque illum nulla laborum blanditiis unde.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, voluptates, soluta velit nostrum ut iste exercitationem vitae ipsum repellendus laudantium ab possimus nemo odio cumque illum nulla laborum blanditiis unde.</p>
+<section>
+  <h2 class="text-center" href="url">Brief SmartClick Guide</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/AYi50GMSRsU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-    <hr>
-    <footer class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <p>Copyright © Collin Li. All rights reserved.</p>
-          </div>
+  </div>
+</section>
+<hr>
+<section>
+  <h2 class="text-center" href="url">Video Presentation</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/SnMMaSRUR-E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
-    </footer>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap-4.4.1.js"></script>
+    </div>
+  </div>
+</section>
+<hr>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2">
+      <h2>Contact Me</h2>
+      <address>
+      <strong>Collin Li</strong><br>
+      Great Neck South High School, Great Neck,<br>
+      NY, 11020, US<br>
+      <abbr title="Email">E-mail:</abbr> collinli2022@gmail.com
+      </address>
+      <h4>Social</h4>
+      <div class="row">
+        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
+        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
+        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
+        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-12">
+      <h2>Acknowledgements</h2>
+      <ul class="list-unstyled">
+        <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1">Nicole Spinelli</h5>
+            <p class="mb-0">School Research Mentor</p>
+          </div>
+        </li>
+        <li class="media my-4"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
+          <div class="media-body">
+            <h5 class="mt-0 mb-1"></h5>
+            <p class="mb-0"></p>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="col-lg-4 col-12">
+      <h2>About Me</h2>
+      <p>Collin is currently a senior at Great Neck South High School with interests rooted in STEM. He is an member of FIRST Robotics Team Rebels 2638. In his free time, he enjoys playing soccer, riding his electric skateboard, and snowboarding.</p>
+    </div>
+  </div>
+</div>
+<hr>
+<footer class="text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright © Collin Li. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+<script src="js/jquery-3.4.1.min.js"></script> 
+<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<script src="js/popper.min.js"></script> 
+<script src="js/bootstrap-4.4.1.js"></script> 
 
-    <!-- Default Statcounter code for SmartClick http://smartclick.ml/ -->
-    <script type="text/javascript">
+<!-- Default Statcounter code for SmartClick http://smartclick.ml/ --> 
+<script type="text/javascript">
       var sc_project=12735504; 
       var sc_invisible=1; 
       var sc_security="9e43bad4"; 
-      </script>
-      <script type="text/javascript"
+      </script> 
+<script type="text/javascript"
       src="https://www.statcounter.com/counter/counter.js"
       async></script>
-      <noscript><div class="statcounter"><a title="Web Analytics"
+<noscript>
+<div class="statcounter"><a title="Web Analytics"
       href="https://statcounter.com/" target="_blank"><img
       class="statcounter"
       src="https://c.statcounter.com/12735504/0/9e43bad4/1/"
       alt="Web Analytics"
-      referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-    <!-- End of Statcounter Code -->
-  </body>
+      referrerPolicy="no-referrer-when-downgrade"></a></div>
+</noscript>
+<!-- End of Statcounter Code -->
+</body>
 </html>
