--- a/index.html
+++ b/index.html
@@ -71,12 +71,11 @@
       NY, 11020, US<br>
       <abbr title="Email">E-mail:</abbr> collinli2022@gmail.com
       </address>
-      <h4>Social</h4>
+      <h4>Socials (Buttons)</h4>
       <div class="row">
-        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
-        <div class="col-2"><img class="rounded-circle" src="images/32X32.gif" alt=""></div>
+        <div class="col-2"> <a href='https://www.instagram.com/collinli2010/?hl=en'> <img class="rounded-circle" src="images/socials/insta.jpg" width="75" height="75" alt=""></a></div>
+        <div class="col-2"></div>
+        <div class="col-2"> <a href='https://www.linkedin.com/in/collinli-ny'> <img class="rounded-circle" src="images/socials/linkedin.jpg" width="75" height="75" alt=""></a></div>
       </div>
     </div>
     <div class="col-lg-4 col-md-6 col-12">
