--- a/index.html
+++ b/index.html
@@ -79,21 +79,15 @@
       </div>
     </div>
     <div class="col-lg-4 col-md-6 col-12">
-      <h2>Acknowledgements</h2>
-      <ul class="list-unstyled">
-        <li class="media"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">Nicole Spinelli</h5>
-            <p class="mb-0">School Research Mentor</p>
-          </div>
+      <ul> 
+        <li>
+            [J]&nbsp;<a href="https://pubmed.ncbi.nlm.nih.gov/35202202/"> IRIS-Intelligent Rapid Interactive Segmentation for Measuring Liver Cyst Volumes in Autosomal Dominant Polycystic Kidney Disease</a> <br>
+            <b>Collin Li</b>, Dominick Romano, Sophie J Wang, Hang Zhang, Martin R Prince, and Yi Wang <br>
+            <i>Tomography</i>, 2022. <br> 
+            [<a href="https://www.mdpi.com/2379-139X/8/1/37/htm" target="“blank”">pdf</a>][<a href="https://github.com/collinli2022/SmartClick" target="“blank”">code</a>]
+            <p></p>
         </li>
-        <li class="media my-4"> <img class="mr-3" src="images/35X35.gif" alt="Generic placeholder image">
-          <div class="media-body">
-            <h5 class="mt-0 mb-1"></h5>
-            <p class="mb-0"></p>
-          </div>
-        </li>
-      </ul>
+    </ul>
     </div>
     <div class="col-lg-4 col-12">
       <h2>About Me</h2>
