--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <strong>Collin Li</strong><br>
       Great Neck South High School, Great Neck,<br>
       NY, 11020, US<br>
-      <abbr title="Email">E-mail:</abbr> collinli2022@gmail.com
+      <abbr title="Email">E-mail:</abbr> collinli2353@gmail.com
       </address>
       <h4>Socials (Buttons)</h4>
       <div class="row">
@@ -91,7 +91,7 @@
     </div>
     <div class="col-lg-4 col-12">
       <h2>About Me</h2>
-      <p>Collin is currently a senior at Great Neck South High School with interests rooted in STEM. He is an member of FIRST Robotics Team Rebels 2638. In his free time, he enjoys playing soccer, riding his electric skateboard, and snowboarding.</p>
+      <p>Collin is currently at Compute Science Major at Cornell University with interests rooted in STEM. He is an member of Cornell University Autonomous Underwater Robotics Project Team. In his free time, he enjoys playing soccer, gaming, and snowboarding.</p>
     </div>
   </div>
 </div>
