--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
       <h2>Contact Me</h2>
       <address>
       <strong>Collin Li</strong><br>
-      Great Neck South High School, Great Neck,<br>
-      NY, 11020, US<br>
+      Cornell University, Ithaca,<br>
+      NY, 14850, US<br>
       <abbr title="Email">E-mail:</abbr> collinli2353@gmail.com
       </address>
       <h4>Socials (Buttons)</h4>
